--- a/views/adminLayouts/navbar.ejs
+++ b/views/adminLayouts/navbar.ejs
@@ -55,12 +55,12 @@
                     </div>
                 </li>
                 <li class="menu-item has-submenu" id="dashboardMenuItem">
-                    <a class="menu-link" href="/admin/salesReport">
+                    <a class="menu-link" href="/admin/orderList/salesReport">
                         <i class="icon material-icons md-trending_up"></i>
                         <span class="text">Sales</span>
                     </a>
                     <div class="submenu">
-                        <a href="/admin/salesReport">Sales Report</a>
+                        <a href="/admin/orderList/salesReport">Sales Report</a>
                     </div>
                 </li>
                 
