--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -83,7 +83,7 @@
 
                                                 </td>
 
-                                                <td class="text-center">₹<%= order.totalAmount %>
+                                                <td class="text-center">₹<%= order.totalAmount.toFixed(2) %>
                                                 </td>
                                                 <td class="text-center">
                                                     <%= order.paymentMethod %>
