--- a/views/admin/salesReport.ejs
+++ b/views/admin/salesReport.ejs
@@ -60,6 +60,7 @@
                     <div class="form-group">
                         <label for="period">Period:</label>
                         <select id="period" name="period" class="form-control">
+                            <option value="">All</option>
                             <option value="daily">Daily</option>
                             <option value="weekly">Weekly</option>
                             <option value="monthly">Monthly</option>
