--- a/views/adminLayouts/navbar.ejs
+++ b/views/adminLayouts/navbar.ejs
@@ -2,7 +2,7 @@
     <div class="screen-overlay"></div>
     <aside class="navbar-aside" id="offcanvas_aside">
         <div class="aside-top">
-            <a href="/admin/dashboard" class="brand-wrap ">
+            <a href="/admin/adminhome" class="brand-wrap ">
                 <img src="/admin/imgs/theme/logo.svg" class="logo" alt="Evara Dashboard">
             </a>
             <div>
@@ -12,7 +12,7 @@
         <nav>
             <ul class="menu-aside">
                 <li class="menu-item " id="dashboardMenuItem">
-                    <a class="menu-link" href="/admin/dashboard"> <i class="icon material-icons md-home"></i>
+                    <a class="menu-link" href="/admin/adminhome"> <i class="icon material-icons md-home"></i>
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
